tests/rosetta/out/Smalltalk/call-a-function-8.out
/tmp/call-a-function-8.st:6: parse error, expected ']'
