tests/rosetta/out/Smalltalk/call-a-function-8.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| mapString out i main fn |
mapString := [:s :f | out := ''.
i := 0.
[(i < ((s size)))] whileTrue: [.
out := (out + (f value: s copyFrom: (i + 1) to: (i + 1))).
i := (i + 1).
].
.
out. ].
main := [ fn := [:r | ((r = (' '))) ifTrue: [''] ifFalse: [r] ].
mapString value: 'Spaces removed' value: fn.
mapString value: 'Test' value: [:r | lower value: r ].
mapString value: 'shift' value: [:r | r ]. ].
main value.
